testsuite/poke.pkl/apush-diag-1.pk
/* { dg-do compile } */

var a =
  apush ("foo", /* { dg-error "invalid operand.*\n.*expected array" } */
         10);
